--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<h1>변교웅</h1>
 						<h2>I'm a
 							<span class="txt-rotate" data-period="500"
-								data-rotate='[  "신입 개발자", "블록체인 개발자", "신입"]'></span>
+								data-rotate='[  "신입 개발자", "백엔드 개발자", "블록체인 개발자"]'></span>
 						</h2>
 					</div>
 				</div>
