--- a/index.html
+++ b/index.html
@@ -90,23 +90,23 @@
 						<div class="col-md-12 heading-section ftco-animate">
 							<h1 class="big">About</h1>
 							<h2 class="mb-4">About Me</h2>
-							<p>커피와 노트북만 있다면, 언제 어디서나 즐겁게 일하는 6년차 개발자 정쿠입니다. </p>
+							<p>졸업예정인 블록체인 공부중인 신입개발자 입니다. </p>
 							<ul class="about-info mt-4 px-md-0 px-2">
-								<li class="d-flex"><span>Name:</span> <span>구민정</span></li>
-								<li class="d-flex"><span>Address:</span> <span>성남시 분당구 정자동</span></li>
-								<li class="d-flex"><span>Email:</span> <span>cookie00421@gmail.com</span></li>
-								<li class="d-flex"><span>Phone: </span> <span>+82-10-1234-5678</span></li>
+								<li class="d-flex"><span>Name:</span> <span>변교웅</span></li>
+								<li class="d-flex"><span>Address:</span> <span>대전광역시 유성구</span></li>
+								<li class="d-flex"><span>Email:</span> <span>bkw9565@gmail.com</span></li>
+								<li class="d-flex"><span>Phone: </span> <span>+82-10-9565-5958</span></li>
 							</ul>
 						</div>
 					</div>
 					<div class="counter-wrap ftco-animate d-flex mt-md-3">
 						<div class="text">
 							<p class="mb-4">
-								<span class="number" data-number="24">0</span>
+								<span class="number" data-number="1">0</span>
 								<span>Project complete</span>
 							</p>
 							<p><a target="_blank"
-									href="https://drive.google.com/file/d/1hlXX2n15rPwT8s6vseOf9uBwid22ugWq/view"
+									href="https://drive.google.com/file/d/1u2RXAFymnLqs2YoMRXv0OvhA3Uk5qITi/view?usp=sharing"
 									class="btn btn-primary py-3 px-3">이력서 다운받기</a></p>
 						</div>
 					</div>
@@ -129,7 +129,7 @@
 				<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
 					<div class="block-18 shadow">
 						<div class="text">
-							<strong class="number" data-number="100">0</strong>
+							<strong class="number" data-number="000">0</strong>
 							<span>Complete Projects</span>
 						</div>
 					</div>
@@ -137,7 +137,7 @@
 				<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
 					<div class="block-18 shadow">
 						<div class="text">
-							<strong class="number" data-number="100">0</strong>
+							<strong class="number" data-number="000">0</strong>
 							<span>Happy Customers</span>
 						</div>
 					</div>
@@ -145,7 +145,7 @@
 				<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
 					<div class="block-18 shadow">
 						<div class="text">
-							<strong class="number" data-number="50">0</strong>
+							<strong class="number" data-number="00">0</strong>
 							<span>Cups of coffee</span>
 						</div>
 					</div>
@@ -162,7 +162,7 @@
 					<nav id="navi">
 						<ul>
 							<li><a href="#page-1">Education</a></li>
-							<li><a href="#page-2">Experience</a></li>
+							<!--<li><a href="#page-2">Experience</a></li>-->
 							<li><a href="#page-3">Skills</a></li>
 							<li><a href="#page-4">Projects</a></li>
 						</ul>
@@ -211,7 +211,7 @@
 						</div>
 					</div>
 
-					<div id="page-2" class="page two">
+					<!--<div id="page-2" class="page two">
 						<h2 class="heading">Work Experience</h2>
 						<div class="resume-wrap d-flex ftco-animate">
 							<div class="icon d-flex align-items-center justify-content-center">
@@ -277,7 +277,7 @@
 									into your mouth.</p>
 							</div>
 						</div>
-					</div>
+					</div>-->
 					<div id="page-3" class="page three">
 						<h2 class="heading">Skills</h2>
 						<div class="row progress-circle mb-5">
@@ -529,7 +529,7 @@
 	</section>
 
 
-	<section class="ftco-section ftco-project">
+	<!--<section class="ftco-section ftco-project">
 		<div class="container-fluid px-md-0">
 			<div class="row no-gutters justify-content-center pb-5">
 				<div class="col-md-12 heading-section text-center ftco-animate">
@@ -673,7 +673,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 	<section class="ftco-section ftco-hireme img" style="background-image: url(images/bg_1.jpg)">
 		<div class="overlay"></div>
