--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 						<div class="col-md-12 heading-section ftco-animate">
 							<h1 class="big">About</h1>
 							<h2 class="mb-4">About Me</h2>
-							<p>졸업예정인 블록체인 공부중인 신입개발자 입니다. </p>
+							<p>졸업예정 블록체인 공부중인 신입개발자 입니다. </p>
 							<ul class="about-info mt-4 px-md-0 px-2">
 								<li class="d-flex"><span>Name:</span> <span>변교웅</span></li>
 								<li class="d-flex"><span>Address:</span> <span>대전광역시 유성구</span></li>
@@ -176,14 +176,14 @@
 								<span class="flaticon-ideas"></span>
 							</div>
 							<div class="text pl-3">
-								<span class="date">2010-2015</span>
-								<h2>컴퓨터 공학 & 전자 공학 복수 전공</h2>
-								<span class="position">Handong Global Univercity</span>
-								<p>전산 동아리 활동과 기숙사 생활을 통해, 함께 일하는 밥을 배웠습니다. Computer Science 기초 지식을 4년간 탄탄히 쌓아 빠르고 올바른
+								<span class="date">2016-2022</span>
+								<h2>컴퓨터 공학 전공</h2>
+								<span class="position">한밭대학교</span>
+								<p>Computer Science 기초 지식을 4년간 탄탄히 쌓아 빠르고 올바른
 									방향으로 성장할 수 있는 개발자가 되었습니다. </p>
 							</div>
 						</div>
-						<div class="resume-wrap d-flex ftco-animate">
+						<!--<div class="resume-wrap d-flex ftco-animate">
 							<div class="icon d-flex align-items-center justify-content-center">
 								<span class="flaticon-ideas"></span>
 							</div>
@@ -208,7 +208,7 @@
 									regelialia. It is a paradisematic country, in which roasted parts of sentences fly
 									into your mouth.</p>
 							</div>
-						</div>
+						</div>-->
 					</div>
 
 					<!--<div id="page-2" class="page two">
@@ -283,10 +283,10 @@
 						<div class="row progress-circle mb-5">
 							<div class="col-lg-4 mb-4">
 								<div class="bg-white rounded-lg shadow p-4">
-									<h2 class="h5 font-weight-bold text-center mb-4">CSS</h2>
+									<h2 class="h5 font-weight-bold text-center mb-4">GoLang</h2>
 
 									<!-- Progress bar 1 -->
-									<div class="progress mx-auto" data-value='90'>
+									<div class="progress mx-auto" data-value='80'>
 										<span class="progress-left">
 											<span class="progress-bar border-primary"></span>
 										</span>
@@ -317,10 +317,10 @@
 
 							<div class="col-lg-4 mb-4">
 								<div class="bg-white rounded-lg shadow p-4">
-									<h2 class="h5 font-weight-bold text-center mb-4">HTML</h2>
+									<h2 class="h5 font-weight-bold text-center mb-4">Python</h2>
 
 									<!-- Progress bar 1 -->
-									<div class="progress mx-auto" data-value='80'>
+									<div class="progress mx-auto" data-value='70'>
 										<span class="progress-left">
 											<span class="progress-bar border-primary"></span>
 										</span>
@@ -351,10 +351,10 @@
 
 							<div class="col-lg-4 mb-4">
 								<div class="bg-white rounded-lg shadow p-4">
-									<h2 class="h5 font-weight-bold text-center mb-4">jQuery</h2>
+									<h2 class="h5 font-weight-bold text-center mb-4">JS</h2>
 
 									<!-- Progress bar 1 -->
-									<div class="progress mx-auto" data-value='75'>
+									<div class="progress mx-auto" data-value='60'>
 										<span class="progress-left">
 											<span class="progress-bar border-primary"></span>
 										</span>
@@ -386,53 +386,20 @@
 						<div class="row">
 							<div class="col-md-6 animate-box">
 								<div class="progress-wrap ftco-animate">
-									<h3>React</h3>
+									<h3>GoLang</h3>
 									<div class="progress">
-										<div class="progress-bar color-1" role="progressbar" aria-valuenow="90"
-											aria-valuemin="0" aria-valuemax="100" style="width:90%">
-											<span>90%</span>
+										<div class="progress-bar color-1" role="progressbar" aria-valuenow="80"
+											aria-valuemin="0" aria-valuemax="100" style="width:80%">
+											<span>80%</span>
 										</div>
 									</div>
 								</div>
 							</div>
 							<div class="col-md-6 animate-box">
 								<div class="progress-wrap ftco-animate">
-									<h3>jQuery</h3>
+									<h3>Python</h3>
 									<div class="progress">
-										<div class="progress-bar color-2" role="progressbar" aria-valuenow="85"
-											aria-valuemin="0" aria-valuemax="100" style="width:85%">
-											<span>85%</span>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-6 animate-box">
-								<div class="progress-wrap ftco-animate">
-									<h3>HTML5</h3>
-									<div class="progress">
-										<div class="progress-bar color-3" role="progressbar" aria-valuenow="95"
-											aria-valuemin="0" aria-valuemax="100" style="width:95%">
-											<span>95%</span>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-6 animate-box">
-								<div class="progress-wrap ftco-animate">
-									<h3>CSS3</h3>
-									<div class="progress">
-										<div class="progress-bar color-4" role="progressbar" aria-valuenow="90"
-											aria-valuemin="0" aria-valuemax="100" style="width:90%">
-											<span>90%</span>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="col-md-6 animate-box">
-								<div class="progress-wrap ftco-animate">
-									<h3>WordPress</h3>
-									<div class="progress">
-										<div class="progress-bar color-5" role="progressbar" aria-valuenow="70"
+										<div class="progress-bar color-2" role="progressbar" aria-valuenow="70"
 											aria-valuemin="0" aria-valuemax="100" style="width:70%">
 											<span>70%</span>
 										</div>
@@ -441,11 +408,44 @@
 							</div>
 							<div class="col-md-6 animate-box">
 								<div class="progress-wrap ftco-animate">
-									<h3>SEO</h3>
+									<h3>JS</h3>
 									<div class="progress">
-										<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
-											aria-valuemin="0" aria-valuemax="100" style="width:80%">
-											<span>80%</span>
+										<div class="progress-bar color-3" role="progressbar" aria-valuenow="60"
+											aria-valuemin="0" aria-valuemax="100" style="width:60%">
+											<span>60%</span>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-6 animate-box">
+								<div class="progress-wrap ftco-animate">
+									<h3>HTML5</h3>
+									<div class="progress">
+										<div class="progress-bar color-4" role="progressbar" aria-valuenow="50"
+											aria-valuemin="0" aria-valuemax="100" style="width:50%">
+											<span>50%</span>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-6 animate-box">
+								<div class="progress-wrap ftco-animate">
+									<h3>CSS3</h3>
+									<div class="progress">
+										<div class="progress-bar color-5" role="progressbar" aria-valuenow="50"
+											aria-valuemin="0" aria-valuemax="100" style="width:50%">
+											<span>50%</span>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-6 animate-box">
+								<div class="progress-wrap ftco-animate">
+									<h3>Fabric SDK</h3>
+									<div class="progress">
+										<div class="progress-bar color-6" role="progressbar" aria-valuenow="70"
+											aria-valuemin="0" aria-valuemax="100" style="width:70%">
+											<span>70%</span>
 										</div>
 									</div>
 								</div>
@@ -459,28 +459,26 @@
 								<span class="flaticon-ideas"></span>
 							</div>
 							<div class="text pl-3">
-								<span class="date">2019.09-2020.08</span>
+								<span class="date">2021.01-2021.11</span>
 								<div class="d-flex">
-									<h2>웰리스 여행 상품 예약 플랫폼 개발</h2>
+									<h2>하이퍼레저 패브릭 이용한 중고차 거래 플랫폼</h2>
 									<div>&nbsp;<a class="btn btn-outline-secondary" target="_blank"
 											class="btn btn-outline-secondary"
-											href="https://github.com/congchu/portfolio-template-2">Github</a>&nbsp;<a
+											href="https://github.com/bkw1212/hyperledger_fabric_usedcar">Github</a>&nbsp;<a
 											class="btn btn-outline-secondary" target="_blank"
-											href="/images/project_1_screenshot.png">스크린샷</a>&nbsp;<a
-											class="btn btn-outline-secondary" target="_blank"
-											href="https://www.wellytravel.com/">Link</a>
+											href="/images/project_1_screenshot.png">스크린샷</a>&nbsp;<a></a>		
 									</div>
 								</div>
-								<span class="position">주식회사 더라피스</span>
-								<div> <b class="text-dark">기술 스택 : </b>React, Typescript, Next.js, Styled-Component,
-									MobX
+								<span class="position">졸업 작품</span>
+								<div> <b class="text-dark">기술 스택 : </b>GoLang, Vue.js, Hyperledger Fabric, Docker,
+									Node.js
 								</div>
-								<div> <b class="text-dark">주요 기능 : </b> 회원 관리 및 SNS 로그인, 상품 리스트 확인, 상품 상세 정보
-									확인, 예약 관리, 결제 </div>
-								<p> React </p>
+								<div> <b class="text-dark">주요 기능 : </b> 회원 관리 및 로그인, 상품 리스트 확인, 상품 등록, 상품 상세 정보
+									확인, 거래, 결제 </div>
+								
 							</div>
 						</div>
-						<div class="resume-wrap d-flex ftco-animate">
+						<!--<div class="resume-wrap d-flex ftco-animate">
 							<div class="icon d-flex align-items-center justify-content-center">
 								<span class="flaticon-ideas"></span>
 							</div>
@@ -521,7 +519,7 @@
 									fly
 									into your mouth.</p>
 							</div>
-						</div>
+						</div>-->
 					</div>
 				</div>
 			</div>
