--- a/index.html
+++ b/index.html
@@ -475,6 +475,8 @@
 								</div>
 								<div> <b class="text-dark">주요 기능 : </b> 회원 관리 및 로그인, 상품 리스트 확인, 상품 등록, 상품 상세 정보
 									확인, 거래, 결제 </div>
+								<div> <b class="text-dark">수상내역 : </b> 한국지식정보기술학회 우수논문상
+									</div>
 								
 							</div>
 						</div>
