--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 						<div class="col-md-12 heading-section ftco-animate">
 							<h1 class="big">About</h1>
 							<h2 class="mb-4">About Me</h2>
-							<p>졸업예정 블록체인 공부중인 신입개발자 입니다. </p>
+							<p>졸업예정 백엔드와 블록체인을 공부중인 신입개발자 입니다. </p>
 							<ul class="about-info mt-4 px-md-0 px-2">
 								<li class="d-flex"><span>Name:</span> <span>변교웅</span></li>
 								<li class="d-flex"><span>Address:</span> <span>대전광역시 유성구</span></li>
